# mathlib

./: CMakeLists.txt  CPPLINT.cfg
lib/: CMakeLists.txt  fermats_little_theorem.cppm  fibonacci.cppm  mathlib.cppm  number_theory.cppm
lib/number_theory/: fibonacci.cppm  primes.cppm
src/: primality_test_fermat.cpp
test/: CMakeLists.txt  fibonacci.cxx  number-theory.cxx
